Draft of the page / lined favicon, removed import componenetes

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("./components/cards.css");
+/* @import url("./components/cards.css"); */
 
 /* Font asset */
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
